--- a/styles.css
+++ b/styles.css
@@ -1,229 +1,354 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap');
 
-* {
-  font-family: Raleway;
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizelegibility;
-  text-size-adjust: 100%;
-  outline: none !important;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  background-color: black;
 }
 
-html {
-  font-size: 62.5%
+/*----------NAVBAR----------*/
+#spin:after {
+  content:"";
+  animation: spin 15s linear infinite;
 }
-
-.container-fluid {
-  padding: 0 10% !important;
+@keyframes spin {
+  0% { content:"Web Developer"; }
+  25% { content:"Pyhton Developer"; }
+  50% { content:"Love to write articles"; }
+  75% { content:"Cyware"; }
+  100% { content:"ML/DL Enthusiast"; }
+  /*50% { content: "adipisicing"; }
+  60% { content: "elit"; }
+  70% { content: "Hic"; }
+  80% { content: "atque"; }
+  90% { content: "fuga"; }*/
 }
-
-ul {
-  list-style: circle;
-}
-
-li::marker {
-  color: black;
-}
-
-p {
-  font-size: 2.48262rem;
-  letter-spacing: 0.115103rem;
-  color: rgb(102, 103, 102);
-  word-break: break-all;
-  -webkit-box-pack: center;
-  justify-content: center;
-}
-
-.headLine {
-  width: 0.225693rem;
-  top: 0px;
-  left: 1rem;
-  height: 11.9617rem;
-  background-color: rgb(41, 41, 41);
-}
-
-.header {
-  padding-top: 17.8297rem;
-  padding-bottom: 10rem;
-  direction: ltr;
-  margin-bottom: 3rem;
-}
-
-.firstName {
-  font-weight: lighter;
-  text-transform: uppercase;
-  word-break: break-all;
-  color: rgb(62, 62, 62);
-  font-size: 6.65793rem;
-  line-height: 1.68;
-  letter-spacing: 3.89546rem;
-  margin-bottom: 1.12846rem;
-  direction: ltr;
-}
-
-.lastName {
-  font-weight: bold;
-  font-size: 9.02771rem;
-  text-transform: uppercase;
-  word-break: break-all;
-  padding-right: 5.64232rem;
-  color: rgb(62, 62, 62);
-  line-height: 1.09;
-  letter-spacing: 4.15952rem;
-  direction: ltr;
-}
-
-.jobTitle {
-  padding-right: 0px;
-  margin-top: 4.51385rem;
-  color: rgb(41, 41, 41);
-  
-  span {
-    padding-left: 1rem;
-    letter-spacing: 0.710932rem;
-    text-transform: uppercase;
-    word-break: break-all;
-    direction: ltr;
-    color: rgb(76, 74, 74);
-    font-size: 3.04685rem;
-  }
-}
-
-.photo {
-  width: 27.2rem;
-  height: 27.2rem;
-}
-
-.middleLine {
-  width: 0.225693rem;
-  bottom: 3.1597rem;
-  left: 1rem;
-  height: 5.64232rem;
-  background-color: rgb(41, 41, 41);
-}
-
-.icon {
-  width: 5rem;
-  height: 5rem;
-  font-size: 2.5rem;
-  color: white;
-  background-color: rgb(62, 62, 62);
-  border-radius: 50%;
-  padding: 0.7rem;
-}
-
-a p {
-  word-break: break-all;
-  color: rgb(102, 103, 102);
-}
-
-.list-item {
-  padding-top: 2.03123rem;
-  padding-bottom: 2.03123rem;
-  margin-right: 1rem;
-  &:not(:last-child) {
-    border-bottom: 0.225693rem solid rgb(35, 31, 32);
-  }
-}
-
-.title {
+#navbar {
+  background-color: black;
+  position: fixed;
   width: 100%;
-  font-weight: bold;
-  font-size: 4rem;
-  text-transform: uppercase;
-  line-height: 4.5rem;
-  border-bottom: 1px solid rgb(35, 31, 32);
-  padding-top: 0rem;
-  padding-bottom: 3.8rem;
-  color: rgb(34, 33, 33);
-  letter-spacing: 1.01562rem;
-  margin-bottom: 1.8rem;
+  padding: 5px;
 }
 
-.personal-details {
-  .title {
-    padding-top: 4rem;
+#navbar ul {
+  display: flex;
+  justify-content: flex-end;
+}
+
+#navbar ul li {
+  list-style-type: none;
+}
+
+#navbar ul li a {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  margin-right: 70px;
+  transition-duration: .3s;
+}
+
+#navbar ul li a:hover {
+  box-shadow: inset 0px -3px purple;
+}
+
+@media screen and (max-width:450px) {
+  #navbar {
+    padding: 0;
+  }
+  #navbar ul {
+    justify-content: center;
+  }
+  #navbar ul li a {
+    margin-left: 15px;
+    margin-right: 15px;
+    font-size: 15px;
   }
 }
 
-.bullet {
-  position: relative;
-  i {
-    font-size: 2.6rem;
-  }
-  &:before {
-    content: "";
-    position: absolute;
-    left: 1.9rem;
-    width: 0.3rem;
-    height: 70%;
-    background-color: #292929;
-    margin-top: 4.2rem;
-  }
-}
+/*----------WELCOME-SCREEN----------*/
 
-.record {
-  padding-top: 2rem;
-  p {
+#welcome-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    font-size: 2.7rem;
-    line-height: 1.33;
-    color: rgb(102, 103, 102);
-    word-break: break-word;
+    height: 100vh;
+    background-color: black;
+  line-height: 1px;
+}
+
+#welcome-section h1 {
+  color: white;
+  font-size: 50px;
+  letter-spacing: 1px;
+}
+
+#welcome-section p {
+  font-size: 25px;
+  color: purple;
+  font-style: italic;
+  font-weight: 600;
+}
+
+@media screen and (max-width:500px) {
+  #welcome-section h1 {
+    font-size: 25px;
+  }
+  #welcome-section p {
+    font-size: 20px;
+  }
+}
+
+/*----------PROJECTS----------*/
+
+#projects {
+  min-height: 100vh;
+  width: 100%;
+  background-color: black;
+  color: white;
+  padding-bottom: 80px;
+}
+
+#projects h1 {
+  text-align: center;
+  font-size: 35px;
+  padding-top: 70px;
+}
+
+@media screen and (max-width:600px) {
+  #projects h1 {
+    font-size: 25px;
+  }
+}
+
+#projects h1 a {
+  box-shadow: inset 0px -4px purple;
+}
+
+.project-grid {
+  margin-top: 100px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-bottom: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+  grid-row-gap: 50px;
+  overflow: hidden;
+}
+
+@media screen and (max-width:1180px) {
+  .project-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width:800px) {
+  .project-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (max-width:420px) {
+  .project-grid {
+    display: block;
+    padding: 10px;
+  }
+}
+
+.sub-project {
+  width: auto;
+  text-decoration: none;
+  background-color: #2a2a2a;
+  transition: .3s ease-in-out;
+  border-radius: 5px;
+}
+
+.sub-project:hover {
+  box-shadow: 6px 6px 0px white;
+}
+
+.sub-project h2 {
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 100px 70px 100px;
+  color: #959595;
+}
+
+.sub-project a {
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+}
+
+.project-tile {
+  background-color: purple;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  margin-bottom: 0;
+  border-radius: 5px;
+}
+
+.sub-project .code {
+  opacity: 0;
+  transition: .5s ease-in-out;
+}
+
+.sub-project:hover .code, .project-tile:hover .code {
+  opacity: 1;
+}
+
+@media screen and (max-width:420px) {
+  .sub-project h2 {
+    font-size: 30px;
+    padding: 80px 80px 50px 80px;
+  }
+  .sub-project a {
+    font-size: 15px;
+  }
+  .project-tile {
+    padding: 10px;
+  }
+}
+
+#show-all {
+  margin-bottom: 70px;
+  text-align: center;
+}
+
+#show-all a {
+  text-decoration: none;
+}
+
+#show-all-btn {
+  background-color: purple;
+  border: none;
+  font-size: 18px;
+  color: white;
+  padding: 12px;
+  border-radius: 5px;
+  outline: none;
+  cursor: pointer;
+  transition: .3s ease-in-out;
+}
+
+#show-all-btn i {
+  font-size: 15px;
+}
+
+#show-all-btn:hover {
+  background-color: #2a2a2a;
+}
+
+#show-all-btn .code {
+  margin-left: 5px;
+  transition: .3s ease-in-out;
+}
+
+#show-all-btn:hover .code {
+  margin-left: 10px;
+}
+
+/*----------CONTACT----------*/
+
+#contact {
+  width: 100%;
+  background-color: black;
+  text-align: center;
+}
+
+#contact h1 {
+  color: white;
+  font-size: 55px;
+  padding-top: 80px;
+  margin-bottom: -15px;
+}
+
+#contact p {
+  font-style: italic;
+  color: white;
+  font-size: 20px;
+}
+
+@media screen and (max-width:600px) {
+  #contact h1 {
+    font-size: 25px;
+  }
+  #contact p {
+    font-size: 15px;
+  }
+}
+
+#contact ul {
+  padding: 50px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+#contact ul li {
+  list-style-type: none;
+}
+
+#contact ul li a {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  transition: .3s ease-in-out;
+}
+
+#contact ul li a:hover {
+  color: purple;
+}
+
+@media screen and (max-width:700px) {
+  #contact ul {
     display: block;
   }
+  #contact ul li {
+    margin-bottom: 10px;
+  }
+  #contact ul li a {
+    font-size: 15px;
+  }
 }
 
-li {
-  font-family: Raleway;
-  line-height: 1.33;
-  font-size: 2.8806rem;
-  color: rgb(123, 123, 123);
+.under-line {
+  width: 100%;
+  height: 5px;
+  background-color: purple;
+  margin-top: 80px;
 }
 
-span {
-  color: rgb(102, 103, 102);
-  font-size: 2.28048rem;
-  line-height: 1.2;
-  letter-spacing: 0.5rem;
+#contact h2 {
+  color: white;
+  padding: 30px 0px 40px 0px;
+  font-size: 18px;
+  letter-spacing: 1px;
 }
 
-.btn-group-fab {
-  position: fixed;
-  width: 50px;
-  height: auto;
-  right: 20px;
-  bottom: 20px;
-}
-.btn-group-fab div {
-  position: relative; width: 100%;
-  height: auto;
-}
-.btn-group-fab .btn {
-  position: absolute;
-  bottom: 0;
-  border-radius: 50%;
-  display: block;
-  margin-bottom: 4px;
-  width: 40px; height: 40px;
-  margin: 4px auto;
+#contact h2 a {
+  text-decoration: none;
+  color: white;
+  transition: .3s ease-in-out;
 }
 
-@media print {
-  @page {
-    size: A4;
-    margin: 0mm !important;
+#contact h2 a:hover {
+  color: purple;
+}
+
+@media screen and (max-width:700px) {
+  #contact h2 {
+    font-size: 15px;
   }
-  html {
-    font-size: 24%;
-  }
-  .header {
-    padding-top: 12rem;
-    padding-bottom: 9rem;
-  }
-  
-  ul li {
-    margin-left: 1rem;
-  }
+}
+
+::selection {
+  background-color: purple;
+  color: white;
 }
